--- a/frontend/src/components/Spots/SpotList/SpotList.css
+++ b/frontend/src/components/Spots/SpotList/SpotList.css
@@ -8,17 +8,39 @@
     flex-wrap: wrap;
     flex-direction: row;
     margin: auto;
-    justify-content: center;
-    gap:10px;
+    justify-content: flex-start;
+    gap:30px;
     align-content: space-between;
+    padding: 80px;
+    text-decoration:none;
+
+}
+div.listitem a{
+    color: black;
+    text-decoration:none;
 }
 
 .item{
     color:white;
     gap:50px;
+    width: 321px;
+    border-radius: 10px;
 }
 
 .address{
     display: flex;
-    align-items: space-around;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.price{
+    font-weight: bold;
+}
+
+
+div.itemimg img{
+    width: 322px;
+    height: 338px;
+    object-fit: cover;
+    border-radius: 10px;
 }
