--- a/frontend/src/components/Users/Users.css
+++ b/frontend/src/components/Users/Users.css
@@ -1,4 +1,81 @@
-.list{
+.usermanage{
+    margin-left: 230px;
+    margin-right: 230px;
+}
+
+.listbutton{
+    background-color: white;
+    font-size: 15px;
+    border-radius: 10px;
+    margin-top: 17px;
+    padding-left: 20px;
+    padding-right: 20px;
+    cursor: pointer;
+    border: 1px solid black;
+    height: 40px;
+}
+.listbutton:hover{
+    background-color: rgb(128, 128, 128,10%);
+}
+
+.buttons{
+    background-color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid black;
+    background-color: #E61E4D;
+    color: white;
+}
+
+.buttons:hover{
+    background-color: rgb(128, 128, 128,10%);
+}
+
+.topbar{
+    display:flex;
+    justify-content: space-between;
+    height: 100px;
+}
+
+.button-section{
+    display: flex;
+    gap:10px
+}
+
+.links{
+    text-decoration: none;
+    color: black;
+}
+
+.managebox{
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 300px;
+    padding: 10px;
+}
+
+.manageaddress{
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    
+}
+.managelist{
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
+}
+
+.revbar{
+    height: 80px;
+}
+
+.managerev{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.managereinfo{
+    margin-bottom: 20px;
 }
