--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,10 @@
 /* TODO Add site wide styles */
+.rootchild{
+    width: 100%;
+    /* padding-right: 5vw;
+    padding-left: 5vw;
+    padding-top: 2vh; */
+    font-family: 'Figtree',system-ui, -apple-system, BlinkMacSystemFont,'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    background-color: #fff;
+}
