--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,7 +1,25 @@
 .loginform {
    display: flex;
    flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   gap: 10px;
+   gap:10px;
+   /* height: 30vh;
+   width: 30vw;
+   
+
+   font-family: 'Figtree';
+   border-radius: 10px; */
+}
+
+.login{
+   height: 40px;
+}
+.loginload{
+   display: flex;
+   flex-direction: column;
+   height: 70vh;
+   width: 30vw;
+   padding: 10px;
+   gap:5px;
+   border-radius: 10px;
+   font-family: 'Figtree';
 }
