--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,7 +1,19 @@
 .signupform {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+    gap: 8px;
+ }
+
+ .signupcompo{
+    height: 90vh;
+    width: 30vw;
+    padding: 10px;
+    gap:5px;
+    border-radius: 10px;
+    font-family: 'Figtree';
+ }
+
+ .signupbt{
+
+    height: 40px;
  }
