--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -2,6 +2,7 @@
    display: flex;
    flex-direction: column;
    gap:10px;
+
    /* height: 30vh;
    width: 30vw;
    
@@ -22,4 +23,6 @@
    gap:5px;
    border-radius: 10px;
    font-family: 'Figtree';
+   padding-left: 30px;
+   padding-right: 30px;
 }
