--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -3,12 +3,6 @@
    flex-direction: column;
    gap:10px;
 
-   /* height: 30vh;
-   width: 30vw;
-   
-
-   font-family: 'Figtree';
-   border-radius: 10px; */
 }
 
 .login{
@@ -18,11 +12,77 @@
    display: flex;
    flex-direction: column;
    height: 70vh;
-   width: 30vw;
-   padding: 10px;
+   width: 500px;
+   padding: 20px;
    gap:5px;
    border-radius: 10px;
    font-family: 'Figtree';
-   padding-left: 30px;
-   padding-right: 30px;
+   padding-left: 40px;
+   padding-right: 40px;
+   overflow: auto;
+   
 }
+.login-title{
+   text-align: center;
+   font-family: 'Figtree';
+   color: rgb(0, 0, 0,70%);
+   border-bottom: 1px solid rgb(0, 0, 0,10%);
+   padding-bottom: 20px;
+}
+
+div.login-icon{
+  font-size: 100px;
+  color: grey;
+  text-align: center;
+}
+
+.login-infomation{
+   display: flex;
+   flex-direction: column;
+   border:1px solid rgb(0, 0, 0,50%);
+   border-radius: 10px;
+   padding: 10px;
+}
+
+.login-text{
+   font-size:13px;
+   color: grey;
+}
+.username{
+   border-bottom: 1px solid rgb(0, 0, 0,50%);
+}
+
+.login-errorload{
+   border:1px solid rgb(0, 0, 0,20%);
+   border-radius: 10px;
+   display: flex;
+   padding: 20px;
+   gap: 10px;
+}
+
+div.login-erroricon i{
+   font-size: 40px;
+   color: #c13515;
+}
+
+.login-errortile{
+   font-weight: bold;
+   font-size: 15px;
+}
+.login-errortext{
+   font-size: 13px;
+   color: grey;
+}
+/* .login-infomation{
+   
+} */
+
+/* .login-infomation{
+   
+} */
+
+/* .login-infomation{
+   
+} */
+
+
