--- a/frontend/src/components/Spots/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot/SingleSpot.css
@@ -69,6 +69,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border:1px solid #E61E4D; 
     background-color: #E61E4D;
     color: white;
     border-radius: 10px;
@@ -79,4 +80,8 @@
     display: flex;
     align-items: center;
     gap:5px;
+}
+
+.hide{
+    display: none;
 }
