--- a/frontend/src/components/Users/Users.css
+++ b/frontend/src/components/Users/Users.css
@@ -52,6 +52,10 @@
     border-radius: 10px;
     width: 300px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap:5px;
 }
 
 .manageaddress{
