--- a/frontend/src/components/Spots/SpotForm/SpotForm.css
+++ b/frontend/src/components/Spots/SpotForm/SpotForm.css
@@ -3,6 +3,7 @@
     flex-direction:column; 
     padding-top: 10px;
     gap:10px;
+    width: 40vw;
 }
 .input{
     width: 100%;
@@ -21,14 +22,18 @@
     background-color: rgb(230, 30, 77,85%);
 }
 
-.spotform-errors{
+.spotform-error{
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
     color: rgb(79, 78, 78);
     gap: 10px;
+    padding-left: 40px;
 }
 
 .spotform-section{
     display: flex;
-    
+    padding-bottom: 30px;
 }
 
 .spotform-errorsec{
@@ -60,6 +65,7 @@
     color: rgb(0, 0, 0,70%);
     border-bottom: 1px solid rgb(0, 0, 0,10%);
     padding-bottom: 20px;
+    margin:0px;
  }
 
 .spotform-neweditspot{
@@ -68,4 +74,9 @@
     border:1px solid rgb(0, 0, 0,30%);
     border-radius: 10px;
     padding: 10px;
+    gap:10px;
+}
+
+.spotform-listitem{
+    border-bottom: 1px solid rgb(0, 0, 0,40%);
 }
