--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -21,6 +21,7 @@ div.userinfo i{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    font-family: 'Figtree';
 
 }
 
