--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -17,12 +17,13 @@ div.userinfo i{
 }
 
 .spotreview{
-    width: 450px;
+    width: 370px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     font-family: 'Figtree';
-
+    overflow: auto;
+    color:rgb(0, 0, 0,70%);
 }
 
 .review{
@@ -37,6 +38,8 @@ div.userinfo i{
     flex-wrap: wrap;
     padding: 10px;
     width: 50vw;
+    padding: 20px;
+    gap:15px;
 }
 
 
