--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -29,7 +29,7 @@ div.userinfo i{
 .review{
     margin-top: 10px;
     margin-bottom: 50px;
-    height: 100px;
+    /* max-height: 100px; */
     font-size: 17px;
 }
 
@@ -38,8 +38,13 @@ div.userinfo i{
     flex-wrap: wrap;
     padding: 10px;
     width: 50vw;
-    padding: 20px;
+    padding-left: 20px;
     gap:15px;
+    overflow-y: auto;
+    max-height: 90vh;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    min-height: 40vh;
 }
 
 
