--- a/frontend/src/components/Spots/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot/SingleSpot.css
@@ -1,6 +1,6 @@
 .spotpage{
-   margin-left: 230px;
-   margin-right: 230px;
+   margin-left: 14.5vw;
+   margin-right: 14.5vw;
 }
 .spotinfo{
     display: flex;
@@ -19,6 +19,8 @@
 
 .infotext{
     padding-left: 30px;
+    font-size: 15px;
+    color: rgb(0, 0, 0,0.6);
 }
 
 .infosection{
@@ -62,7 +64,6 @@
 .info-right{
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
 }
 
 .addreview{
@@ -75,7 +76,7 @@
     background-color: #E61E4D;
     color: white;
     border-radius: 10px;
-    height: 10vh;
+    height: 40px;
 }
 
 .reviewbar{
@@ -96,7 +97,7 @@
     "image0 image1 image3"
     "image0 image2 image4"
     ;
-    gap: 2vh;
+    gap: 1vw;
     overflow: hide;
 }
 
@@ -139,4 +140,148 @@
     height: 25vh;
     width: 18vw;
     border-bottom-right-radius: 20px;
+}
+
+.ss-bookingsec{
+    display: flex;
+    flex-direction: column;
+}
+.ss-bookingdate{
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid rgb(0, 0, 0,0.2);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    gap: 20px;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.ss-input{
+    width: 85%;
+    cursor: pointer;
+}
+
+.ss-dateitem{
+    display: flex;
+    flex-direction: column;
+}
+
+.ss-datelabel{
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.ss-review{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    width: 100%;
+    padding-left: 20px;
+    gap:15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.ss-submit{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.ss-addreview{
+    height: 25px;
+    border-radius: 5px;
+}
+
+.reviewfooter{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.ss-air{
+    font-family:"Poppins"; 
+    font-size: 30px;
+    font-weight:bold;
+    color: #E61E4D;
+}
+
+.ss-cover{
+    font-family:"Poppins"; 
+    font-size: 30px;
+    font-weight:bold;
+}
+
+.ss-aircoversec{
+    padding-top: 20px;
+    margin-top: 20px;
+    border-top: 1px solid rgb(0, 0, 0,0.2);
+}
+
+.ss-aircovercontext{
+    font-size: 16px;
+    color: rgb(0, 0, 0,0.8);
+}
+
+.ss-reviewshowall{
+   font-size: 17px;
+   text-align: center;
+   padding: 10px;
+   padding-left: 20px;
+   padding-right: 20px;
+   border: 1px rgb(0, 0, 0,0.6) solid;
+   cursor: pointer;
+   border-radius: 10px;
+   font-weight: 500;
+   width: 20%;
+   margin-left: 20px;
+}
+.ss-midpot{
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+.ss-spotreview{
+    width: 45%;
+}
+
+.ss-pricesec{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    gap:20px;
+    padding-top: 10px;
+}
+
+.ss-priceitem{
+    display: flex;
+    justify-content: space-between;
+}
+
+.ss-priceheader{
+    text-decoration: underline;
+}
+
+.ss-totalprice{
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.ss-totalsec{
+    border-top: 1px solid rgb(0, 0, 0,0.2);
+    padding-top: 10px;
+}
+
+.ss-wontcharge{
+    text-align: center;
+}
+
+.signin-errors i{
+    color: #c13515;
+}
+
+.signin-errors{
+    color: #E61E4D;
+    padding-left: 5px;
 }
