--- a/frontend/src/components/Spots/SpotList/SpotList.css
+++ b/frontend/src/components/Spots/SpotList/SpotList.css
@@ -3,6 +3,13 @@
     gap:10px;
 }
 
+.Landing-sec{
+    padding-left: 6.5vw;
+    padding-right: 6.5vw;
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
 .listitem{
     display: flex;
     flex-wrap: wrap;
@@ -11,7 +18,6 @@
     justify-content: flex-start;
     gap:30px;
     align-content: space-between;
-    padding: 80px;
     text-decoration:none;
 
 }
@@ -40,7 +46,7 @@ div.listitem a{
 
 div.itemimg img{
     width: 322px;
-    height: 338px;
+    height: 300px;
     object-fit: cover;
     border-radius: 10px;
 }
