--- a/frontend/src/components/Users/Users.css
+++ b/frontend/src/components/Users/Users.css
@@ -83,3 +83,191 @@
 .managereinfo{
     margin-bottom: 20px;
 }
+
+.bm-managelist{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    
+}
+
+.bm-managebox{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid rgb(0, 0, 0,0.2);
+    border-radius: 10px;
+    height: 250px;
+}
+
+.bm-managereinfo{
+    display: flex;
+    justify-content: space-between;
+}
+
+.bm-image{
+    height: 250px;
+    width: 30vw;
+    object-fit: cover;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.bm-lefttopsec{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid rgb(0, 0, 0,0.2);
+    padding-bottom: 10px;
+}
+
+.bm-leftsec{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 50%;
+    padding: 10px;
+}
+
+.bm-address{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(0, 0, 0,0.7);
+}
+
+.bm-city{
+    color: rgb(0, 0, 0,0.7);
+
+}
+
+.bm-managerev{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.bm-buttonsec{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.bm-buttonitem{
+    width: 70px;
+}
+
+.lm-section{
+    min-height: 700px;
+    padding-bottom: 30px;
+}
+
+.bm-no{
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    width: 70px;
+}
+
+.bm-notclick{
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    width: 70px;
+    background-color: rgb(0, 0, 0,0.7);
+}
+
+.om-image{
+    height: 250px;
+    width: 30vw;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.om-managelistsec{
+    padding-top: 20px;
+    margin-top: 20px;
+    border-top: 1px rgb(0, 0, 0,0.2) solid;
+}
+
+.om-managebox{
+    display: flex;
+    border-top: 1px rgb(0, 0, 0,0.2) solid;
+    padding-top:10px;
+    padding-bottom: 10px;  
+}
+
+.om-managebox:hover{
+    background-color: rgb(0, 0, 0,0.2);
+}
+
+.projectlist-titles{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.projectlist-titletext{
+    font-family: 'Lucida Sans Regular', sans-serif;
+    font-size: 15px;
+    color: rgb(0, 0, 0,0.7);
+    width: 16%;
+    text-align:center;
+}
+
+.productlist-item{
+    width: 16%;
+    overflow-x: hidden;
+    color: black;
+    font-size: 14px;
+    margin-right: 20px;
+    text-align: center;
+}
+
+.om-orderlistsec{
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+}
+
+.om-ordertitle{
+    font-size: 20px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+.om-rightsec{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-top: 20px;
+    margin-right: 10%;
+}
+
+.om-righttop{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgb(0, 0, 0,0.2);
+}
+
+.om-addresstitle{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(0, 0, 0,0.7);
+}
+
+.om-button{
+    height: 15px;
+}
+
+.ss-errorsec{
+    padding-top: 10px;
+}
