--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -9,7 +9,7 @@ div.userinfo i{
 .userinfo{
     display: flex;
     align-items: center;
-    gap:5px
+    gap:15px
 }
 .name{
     margin-top: 0px;
@@ -17,7 +17,7 @@ div.userinfo i{
 }
 
 .spotreview{
-    width: 370px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -37,8 +37,9 @@ div.userinfo i{
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-    width: 50vw;
-    padding-left: 20px;
+    width: 45vw;
+    padding-left: 40px;
+    padding-right: 40px;
     gap:15px;
     overflow-y: auto;
     max-height: 90vh;
